src/App.css
.custom-wrapper {
  /* Prod build has different height than local ones, using !important for now */
  height: calc(100vh - 16px) !important;
}

.custom-layout {
  /* height: 100%; */
  --sp-layout-height: 90vh;
}

.inner-app {
  height: 100%;
}

.theme-renderer-card {
  flex: 1 1 auto;
  overflow-y: auto;
}

.template-picker-card {
  flex: 0 0 auto;
}

